# Simple-Calculator

./: README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/components/: calculate.rs  converter.rs  sequences.rs  utils.rs
src/components/: CalculatorButtons.tsx  MathRenderer.tsx  SideMenu.tsx  SplitButton.tsx  ThemeToggle.tsx  WindowWrapper.tsx  handleCalculatorInput.tsx  handleKeyboardInput.tsx
src/pages/: Converter.tsx  Graphs.tsx  ScientificCalculator.tsx  Sequences.tsx  Settings.tsx  StandardCalculator.tsx
src/routes/: AppRoutes.tsx
src/theme/: Theme.tsx
