[package]
    authors    = ["you"]
    description="A Tauri App"
    edition    ="2021"
    name       ="simple-calculator"
    version    ="0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    # The `_lib` suffix may seem redundant but it is necessary
    # to make the lib name unique and wouldn't conflict with the bin name.
    # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
    crate-type= ["cdylib", "rlib", "staticlib"]
    name      ="simple_calculator_lib"

[build-dependencies]
    tauri-build= {version="2.0.3", features= [] }

[dependencies]
    # Tauri dependencies
    serde             = {version="1.0.218", features= ["derive"] }
    serde_json        ="1.0.140"
    tauri             = {version="2.3.1", features= [] }
    tauri-plugin-shell="2.2.0"

    # Custom dependencies
    clipboard   ="0.5"
    lazy_static ="1.4"
    meval       ="0.2"
    miller_rabin="1.1.1"
    num-bigint  ="0.4"
    num_cpus    ="1.16"
    once_cell   ="1.21.1"
    rayon       ="1.10.0"
    regex       ="1.11.0"
